--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pandas==1.5.3
-scikit-learn==1.2.2
-joblib==1.2.0
-matplotlib==3.7.1
-dvc[gcs]==2.57.0
-cml==0.5.10
-
+pandas
+scikit-learn
+joblib
+matplotlib
+dvc[gcs]
+cml
