--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Run training
         run: |
           pip install -r requirements.txt
-          python3 train.py
+          python3 train.py 5
 
       - name: Report metrics
         env:
