--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.tag }}
+          fetch-depth: 0   # fetch full history to ensure the tag exists
+
 
       - uses: iterative/setup-cml@v2
 
